--- a/SRC/pages/projects.html
+++ b/SRC/pages/projects.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Projects</title>
     <link rel="stylesheet" type="text/css" href="../style/style.css">
-    <link rel="icon" href="/Assets/favicons/favicon.png" type="image/png" sizes="32x32">
+    <link rel="icon" href="../../Assets/favicons/favicon.png" type="image/png" sizes="32x32">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 </head>
@@ -38,7 +38,7 @@
             <div class="education-section">
                 <div class="study first">
                     <div class="image">
-                        <img src="/Assets/projects/stopwatch.png" alt="">
+                        <img src="../../Assets/projects/stopwatch.png" alt="">
                     </div>
                     <div class="line"></div>
                     <div class="texts">
@@ -50,7 +50,7 @@
 
                 <div class="study second">
                     <div class="image">
-                        <img src="/Assets/projects/tic-tac-toe.png" alt="Tic Tac Toe Game">
+                        <img src="../../Assets/projects/tic-tac-toe.png" alt="Tic Tac Toe Game">
                     </div>
                     <div class="line"></div>
                     <div class="texts">
@@ -62,7 +62,7 @@
 
                 <div class="study third">
                     <div class="image">
-                        <img src="/Assets/projects/weather.png" alt="Weather App">
+                        <img src="../../Assets/projects/weather.png" alt="Weather App">
                     </div>
                     <div class="line"></div>
                     <div class="texts">
