--- a/SRC/pages/certificates.html
+++ b/SRC/pages/certificates.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Hobbies</title>
     <link rel="stylesheet" type="text/css" href="../style/style.css">
-    <link rel="icon" href="/Assets/favicons/favicon.png" type="image/png" sizes="32x32">
+    <link rel="icon" href="../../Assets/favicons/favicon.png" type="image/png" sizes="32x32">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
@@ -47,7 +47,7 @@
                 <div class="row first">
                     <div class="hobbies 1">
                         <div class="image">
-                            <img src="/Assets/certificates/freecodecamp_responsiveweb.jpg" alt="">
+                            <img src="../../Assets/certificates/freecodecamp_responsiveweb.jpg" alt="">
                         </div>
                         <div class="header">
                             <div class="header-text">Free Code Camp Responsive Web Design</div>
@@ -64,7 +64,7 @@
                     </div>
                     <div class="hobbies 2">
                         <div class="image">
-                            <img src="/Assets/certificates/Data Structure and Algorithms using Java_page-0001.jpg" alt="">
+                            <img src="../../Assets/certificates/Data Structure and Algorithms using Java_page-0001.jpg" alt="">
                         </div>
                         <div class="header">
                             <div class="header-text">Data Structures using Java (NPTEL)</div>
@@ -80,7 +80,7 @@
                 <div class="row second">
                     <div class="hobbies 3">
                         <div class="image">
-                            <img src="/Assets/certificates/certificate_page-0001.jpg" alt="">
+                            <img src="../../Assets/certificates/certificate_page-0001.jpg" alt="">
                         </div>
                         <div class="header">
                             <div class="header-text">Flipkart Runway Season4</div>
@@ -94,7 +94,7 @@
                     </div>
                     <div class="hobbies 4">
                         <div class="image">
-                            <img src="/Assets/certificates/AWS.jpg" alt="">
+                            <img src="../../Assets/certificates/AWS.jpg" alt="">
                         </div>
                         <div class="header">
                             <div class="header-text">AWS Academy Cloud Foundations</div>
@@ -108,7 +108,7 @@
                     </div>
                     <div class="hobbies 5">
                         <div class="image">
-                            <img src="/Assets/certificates/Coursera-algorithmtoolbox_page-0001.jpg" alt="">
+                            <img src="../../Assets/certificates/Coursera-algorithmtoolbox_page-0001.jpg" alt="">
                         </div>
                         <div class="header">
                             <div class="header-text">Algorithmic toolbox (Coursera)</div>
@@ -122,7 +122,7 @@
                     </div>
                     <div class="hobbies 6">
                         <div class="image">
-                            <img src="/Assets/certificates/Coursera-genai_page-0001.jpg" alt="">
+                            <img src="../../Assets/certificates/Coursera-genai_page-0001.jpg" alt="">
                         </div>
                         <div class="header">
                             <div class="header-text">Generative AI (Coursera) </div>
@@ -136,7 +136,7 @@
                     </div>
                     <div class="hobbies 7">
                         <div class="image">
-                            <img src="/Assets/certificates/Coursera-java_page-0001.jpg" alt="">
+                            <img src="../../Assets/certificates/Coursera-java_page-0001.jpg" alt="">
                         </div>
                         <div class="header">
                             <div class="header-text">Java Programming (Coursera) </div>
@@ -150,7 +150,7 @@
                     </div>
                     <div class="hobbies 8">
                         <div class="image">
-                            <img src="/Assets/certificates/Coursera-python_page-0001.jpg" alt="">
+                            <img src="../../Assets/certificates/Coursera-python_page-0001.jpg" alt="">
                         </div>
                         <div class="header">
                             <div class="header-text">Python Programming Essentials (Coursera) </div>
