--- a/SRC/pages/education.html
+++ b/SRC/pages/education.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Education</title>
     <link rel="stylesheet" type="text/css" href="../style/style.css">
-    <link rel="icon" href="/Assets/favicons/favicon.png" type="image/png" sizes="32x32">
+    <link rel="icon" href="../../Assets/favicons/favicon.png" type="image/png" sizes="32x32">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 </head>
@@ -37,7 +37,7 @@
             <div class="education-section">
                 <div class="study first">
                     <div class="image">
-                        <img src="/Assets/education/GMRIT.jpg" alt="">
+                        <img src="../../Assets/education/GMRIT.jpg" alt="">
                     </div>
                     <div class="line"></div>
                     <div class="texts">
@@ -49,7 +49,7 @@
                 </div>
                 <div class="study second">
                     <div class="image">
-                        <img src="/Assets/education/diploma.png" alt="">
+                        <img src="../../Assets/education/diploma.png" alt="">
                     </div>
                     <div class="line"></div>
                     <div class="texts">
@@ -61,7 +61,7 @@
                 </div>
                 <div class="study third">
                     <div class="image">
-                        <img src="/Assets/education/school.png" alt="">
+                        <img src="../../Assets/education/school.png" alt="">
                     </div>
                     <div class="line"></div>
                     <div class="texts">
