--- a/SRC/pages/certificates.html
+++ b/SRC/pages/certificates.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hobbies</title>
+    <title>Certificates</title>
     <link rel="stylesheet" type="text/css" href="../style/style.css">
     <link rel="icon" href="../../Assets/favicons/favicon.png" type="image/png" sizes="32x32">
 
